--- a/caravan/style.css
+++ b/caravan/style.css
@@ -11,6 +11,11 @@ a {
   text-decoration: none;
 }
 
+/* Font */
+header, nav, h2, .main-visual, footer {
+  font-family: Chalkduster, "Bradley Hand", Courier, "Segoe Print", sans-serif;
+}
+
 /* Start CSS */
 /* header */
 header {
@@ -18,10 +23,19 @@ header {
   padding: 15px 0;
   margin: 0 auto;
   text-align: center;
+  position: relative;
 }
-
   header .heading {
     font-size: 32px;
+  }
+  .social i {
+    display: inline-block;
+    margin-left: 20px;
+  }
+  .social {
+    position: absolute;
+    top: 22px;
+    right: 22px;
   }
 
 /* navigation */
@@ -54,12 +68,12 @@ header {
   }
 
   .main-visual-text {
-  color: #fff;
+    color: #fff;
   }
 
   .main-visual-name {
-  margin-top: 30px;
-  color: #fff;
+    margin-top: 30px;
+    color: #fff;
   }
 
 /* main */
@@ -100,22 +114,100 @@ main {
           }
 
         .blog-date {
-        font-size: 12px;
-        display: inline-block;
+          font-size: 12px;
+          display: inline-block;
         }
     .category {
-    display: inline-block;
-    padding: 5px 8px;
-    background-color: #acabab;
-    border-radius: 3px;
-    color: #fff;
-    font-size: 11px;
+      display: inline-block;
+      padding: 5px 8px;
+      background-color: #acabab;
+      border-radius: 3px;
+      color: #fff;
+      font-size: 11px;
+    }
+    .pagination {
+      text-align: center;
+      padding-top: 50px;
+    }
+
+    .pagination p {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      margin: 0 5px;
+      color: #fff;
+      background-color: #acabab;
+      border-radius: 3px;
+      line-height: 30px;
     }
 
   .sidebar {
     width: 230px;
   }
+    .common-heading {
+      border-bottom: 8px solid #f7f7f7;
+      text-align: center;
+      line-height: 0.6;
+    }
 
+    .sidebar-contents {
+      padding: 50px 0;
+    }
+
+    .popular-text,
+    .categories-text {
+      padding-bottom: 5px;
+      border-bottom: 1px solid #f7f7f7;
+      margin-bottom: 5px;
+    }
+
+    .popular-text:last-child,
+    .categories-text:last-child {
+      margin: 0;
+      padding: 0;
+      border: none;
+    }
+
+    .instagram .sidebar-contents {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+      .instagram-box {
+        width: 110px;
+        padding-top: 110px;
+        background-size: cover;
+        background-position: center;
+        margin-bottom: 10px;
+      }
+
+        .instagram-box:nth-child(odd) {
+          margin: 0 10px 10px 0;
+        }
+
+        .instagram-box:nth-child(1) {
+          background-image: url(img/airport.jpg);
+        }
+
+        .instagram-box:nth-child(2) {
+          background-image: url(img/japan.jpg);
+        }
+
+        .instagram-box:nth-child(3) {
+          background-image: url(img/snow.jpg);
+        }
+
+        .instagram-box:nth-child(4) {
+          background-image: url(img/japan2.jpg);
+        }
+
+        .instagram-box:nth-child(5) {
+          background-image: url(img/lake.jpg);
+        }
+
+        .instagram-box:nth-child(6) {
+          background-image: url(img/road.jpg);
+        }
 /* footer */
 footer {
   width: 100%;
@@ -128,4 +220,148 @@ footer {
   .footer-text {
     color: #fff;
   }
+
+/* すべての画面サイズで適用される設定 */
+.social i {
+  color:black;
+}
+/* タブレット横置きサイズ（1024px）以下の際に適用される設定 */
+@media screen and (max-width: 1024px) {
+  .social i {
+    color: green;
+  }
+}
+/* タブレット縦置きサイズ（768px）以下の際に適用される設定 */
+@media screen and (max-width: 768px) {
+  .social i {
+    color: red;
+  }
+  header {
+    width: 100%;
+  }
+  header a{
+    position: relative;
+    top: 10px;
+  }
+  .social {
+    position: relative;
+    right: 11px;
+  }
+  .main-visual-content {
+    width: 100%;
+  }
+  main {
+    width: 100%;
+    display: block;
+  }
+  .blog {
+    width: 100%;
+    margin: 0;
+  }
+
+  .blog-box {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  .blog-image {
+    width: 51%;
+  }
+
+  .blog-text {
+    width: 49%;
+    padding-top: 0px;
+  }
+  .sidebar {
+    width: 100%;
+  }
+
+  .sidebar-contents {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+
+  .pagination {
+    margin-bottom: 50px;
+  }
+}
+/* スマートフォンサイズ（425px）以下の際に適用される設定 */
+@media screen and (max-width: 425px) {
+  .social i {
+    color: blue;
+  }
+  header {
+    width: 100%;
+  }
+  header a{
+    position: relative;
+    top: 15px;
+  }
+  .nav-list {
+    width: 100%;
+  }
+  .nav-list-item {
+    width: 100%;
+    margin: 0 0 10px 0;
+  }
+  .social {
+    position: relative;
+    right: 11px;
+  }
+  .main-visual-content {
+    width: 100%;
+  }
+  main {
+    width: 100%;
+    display: block;
+  }
+  .blog {
+    width: 100%;
+    margin: 0;
+  }
+
+  .blog-box {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
+
+  .blog-image {
+    width: 51%;
+  }
+
+  .blog-text {
+    width: 49%;
+    padding-top: 0px;
+  }
+  .sidebar {
+    width: 100%;
+  }
+
+  .sidebar-contents {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
+  .instagram-box {
+    width: 48%;
+    padding-top: 48%;
+  }
+
+  .instagram-box:nth-child(odd) {
+    margin-right: 4%;
+  }
+
+  .pagination {
+    margin-bottom: 50px;
+  }
+}
 /* End CSS */
